--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "lodash": "^4.17.4"
   },
   "dependencies": {
+    "laravel-echo": "^1.3.0",
     "moment": "^2.18.1",
+    "socket.io-client": "^2.0.1",
+
     "vee-validate": "^2.0.0-rc.3"
   }
 }
